play Card Test running finally